tests/ill_typed/function_params.mist
def foo(a: Int, b: String): Int = a
def run(): Any = foo("1", "s")